# textual-demo

./: .gitignore  pyproject.toml
textual_demo/: stopwatch.py
