[tool.poetry]
name = "textual-demo"
version = "0.1.0"
description = ""
authors = ["Rich Inman <rinman24@gmail.com>"]
readme = "README.md"
packages = [{include = "textual_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
